# dcm2xlsx

./: README.md  pyproject.toml  requirements.txt
dcm2xlsx/: dcm2xlsx.py  dcm2xlsxGUI.py
